force-app/main/default/objects/GoogleIdentity__mdt/GoogleIdentity__mdt.object-meta.xml
<CustomObject>
    <label>GoogleIdentity</label>
    <pluralLabel>GoogleIdentity</pluralLabel>
</CustomObject>