force-app/main/default/objects/GoogleIdentity__mdt/fields/AccessTokenURL__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenURL__c</fullName>
    <label>AccessTokenURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>