force-app/main/default/objects/GoogleIdentity__mdt/fields/AccessType__c.field-meta.xml
<CustomField>
    <fullName>AccessType__c</fullName>
    <label>AccessType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>