force-app/main/default/objects/GoogleIdentity__mdt/fields/AuthorizationURL__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationURL__c</fullName>
    <label>AuthorizationURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>