force-app/main/default/objects/GoogleIdentity__mdt/fields/IncludeGrantedScopes__c.field-meta.xml
<CustomField>
    <fullName>IncludeGrantedScopes__c</fullName>
    <label>IncludeGrantedScopes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>