force-app/main/default/objects/GoogleIdentity__mdt/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>