force-app/main/default/objects/GoogleIdentity__mdt/fields/RedirectURI__c.field-meta.xml
<CustomField>
    <fullName>RedirectURI__c</fullName>
    <label>RedirectURI</label>
    <required>true</required>
    <type>Url</type>
</CustomField>