force-app/main/default/objects/GoogleIdentity__mdt/fields/ResponseType__c.field-meta.xml
<CustomField>
    <fullName>ResponseType__c</fullName>
    <label>ResponseType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>