force-app/main/default/objects/GoogleIdentity__mdt/fields/UserEndpoint__c.field-meta.xml
<CustomField>
    <fullName>UserEndpoint__c</fullName>
    <label>UserEndpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>